umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_openbabel_canon16.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 29
bond_count: 32
sum_formula: C29
graph6: "\\iO__Q??_?_@?@?___??@??C??GG?G@????@?G?GA?????@?O?@??A?????_??@??@???"
