umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_openbabel_canon17.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 43
bond_count: 48
sum_formula: C43
graph6: ji_P?C@?G?_PA???_?G?@A?CC????G??C??@@??G?_???C????O???A????G???@????C???GG???G?????C????@?????G???G?_???O??????@??????_?????G???C?@????C???????_??????A?
