umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_openbabel_canon17a.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 43
bond_count: 48
sum_formula: C43
graph6: ji_P?C@?G?_PA???_?G?@A?CC????G??C??@@??G?_????G??G????A????G???@????C???GG???C?????C????@?????G???C?_???_??????@??????_?????G???G?@????C???????_??????A?
