umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_openbabel_canon_cistrans15.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 25
bond_count: 24
sum_formula: C25
graph6: XiO_GC@?G_?@?@??_?GO???C??G??G??E??????G???_??@???@
